Fixed bundling error and added authorization flag.

--- a/mlidynamics.aspnetmvcangular/Views/Home/Main.cshtml
+++ b/mlidynamics.aspnetmvcangular/Views/Home/Main.cshtml
@@ -38,7 +38,7 @@
             Angular UI for some predefined UI widgets.
         </p>
         <p>
-            <a class="btn" href="#/whatsincluded">Learn More »</a>
+            <a class="btn" href="#/about">Learn More »</a>
         </p>
     </div>
 </div>
